--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ data/cache/*
 !data/cache/.gitkeep
 phpunit.xml
 .phpunit.result.cache
-module/User/dbAdapter/dbAdaper.php
+module/User/dbAdapter/dbAdaper.config.php
 .idea
